partial unit test
